<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_receivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receivers_text" />

        <Spinner
            android:id="@+id/spinner_receivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/receivers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_velocity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/velocity_text" />

        <SeekBar
            android:id="@+id/seekBar_velocity"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="127"
            android:minHeight="25dp"
            android:progress="100" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_text" />

        <Spinner
            android:id="@+id/spinner_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:entries="@array/channels" />

        <ToggleButton
            android:id="@+id/button_sustain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.81"
            android:checked="false"
            android:text="ToggleButton"
            android:textOff="Sustain Off"
            android:textOn="Sustain On" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="0.6">

        <Spinner
            android:id="@+id/spinner_programs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:entries="@array/programs" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:onClick="onOctaveDown"
            android:text="Oct-" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:onClick="onOctaveUp"
            android:text="Oct+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_pitchbend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pitchbend_text" />

        <TextView
            android:id="@+id/text_modulation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/modulation_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekBar_pitchBend"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="0.5"
            android:max="16383"
            android:progress="8192" />

        <SeekBar
            android:id="@+id/seekBar_modulation"
            style="@android:style/Widget.Material.SeekBar"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="0.5"
            android:max="127"
            android:progress="0" />
    </LinearLayout>

    <com.mobileer.miditools.MusicKeyboardView
        android:id="@+id/musicKeyboardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
